--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,47 @@
-title: ""
-description: ""
+title: Team-Dominus
+description: Team-Dominus's website
 baseurl: ""
-url: ""
+url: https://Team-Dominus.github.io/Team-Dominus/
+
+theme: cvless
+
+# site settings
+taglong: Jekyll theme for a beautiful online CV
+tagshort: Jekyll theme
+cv: true
 
 # author settings
 author:
   name: Team-Dominus
   email: teamdominus0601@gmail.com
-photo: /assets/files/Logow.BG.png
+photo: assets/files/Logow.BG.png
 joblines:
-  - Your Job Title
-  - Your Organization
-  - Your Location
-address: Your Address
-phone: Your Phone
+  - University of Jekyll
+  - Department of Themes
+  - 123 Main St, Anytown, USA
+address: Foobar Hall 1.23
+phone: +1 234 567 890
 
-# profile links (원하는 아이콘만 추가)
+# profile links
 profile:
   facebook: https://www.facebook.com/username
   x: https://x.com/username
-  instagram: https://www.instagram.com/username
+  mastodon: https://mastodon.social/@username
+  bluesky: https://bsky.app/profile/username.bsky.social
+  instagram: https://www.instagram.com/dominus0601/
   linkedin: https://www.linkedin.com/in/username
-  github: https://github.com/username
-  cv: true
+  xing: https://www.xing.com/profile/username
+  stackoverflow: https://stackoverflow.com/users/0000000/username
+  medium: https://medium.com/@username
+  github: https://github.com/Team-Dominus
 
+# build settings
+permalink: pretty
 exclude:
-  - demo/
-  - cvless.gemspec
   - LICENSE
   - README.md
-  - screenshot.png
+  - Gemfile
+  - vendor/
 
 plugins:
   - jekyll-feed
@@ -39,18 +51,5 @@ plugins:
   - jekyll-sitemap
 
 sass:
-  style: compressed
   sourcemap: never
-
-feed:
-  path: atom.xml
-
-autopages:
-  enabled: false
-
-pagination:
-  enabled: true
-  per_page: 1
-  sort_reverse: true
-  permalink: /:num/
-  title: ":title &middot; Page :num"
+  
